[workspace]
members = ["jiggler-api", "jiggler-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["andrese03"]
license = "MIT"
edition = "2021"
repository = "https://github.com/andrese03/jiggler_rustle"
homepage = "https://github.com/andrese03/jiggler_rustle"
keywords = ["automation", "screen-saver", "mouse", "keyboard", "cli"]
categories = ["command-line-utilities", "os"]
