[package]
name = "jiggler-api"
version = "0.1.0"
edition = "2021"
description = "Core library for jiggler functionality."
license = "MIT OR Apache-2.0"
repository = "https://github.com/andrese03/jiggler"
readme = "../README.md"

[dependencies]
enigo = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["time"] }
