[package]
name = "jiggler-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Core library for jiggler functionality."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
enigo = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["time"] }
